# Dictation-App-11lab

./: HYPER_KEY_CHANGES.md  README.md  dictation.py  hotkey_interception_research.txt  hotkey_research_prompt.txt  main.py  pyproject.toml
11labs-docs/: MultiChannel Transcriptoin.md  Realtime Streaming.md  Speech To Text.md  Web Hook.md  telegramBot.md  vercel AI SDK.md
Research's result/: ARCHITECTURE.md  INDEX.md  QUICKSTART.md  README.md  comparison_demo.py  hotkey_template.py  hyper_key_cgeventtap.py  hyper_key_hotkey.py  key_code_discovery.py
